# university-tasks

./: .gitignore  README.md
cubant/: .gitignore  Makefile.am  Makefile.in  configure  configure.ac  libtool  result
cubant/include/: Makefile.am  Makefile.in
cubant/include/cubant/: Cubant.hpp  CubantApi.hpp  CubantComplex3D.hpp  ParseHelper.hpp  VectorImpl.hpp
cubant/js/: hausdorff.js  print_hausdorff.js  print_num_of_hs.js  print_stats.js
cubant/qcubant/: big.txt  c.txt  cubants.txt  cubants_black.txt  cviz.cpp  cviz.h  imageviewer.pro  main.cpp  qcubant.pro  reper.cpp  reper.h
cubant/scripts/: draw.py
cubant/src/: Cubant.cpp  CubantApi.cpp  CubantComplex3D.cpp  Makefile.am  Makefile.in  ParseHelper.cpp  VectorImpl.cpp
cubant/tests/: Makefile.am  Makefile.in  intersect.cpp  simple.cpp
diploma/: .~lock.diploma.doc#  diplom[gena].doc  diploma.doc  presentation.ppt
diploma/etc/: article.doc  computer methods of combinatorially-topological constructions.ppt  semi-quantum coding.ppt  (+1 more)
docs/: Buhshtaber V.M., Panov T.E. Toricheskie dejstviya v topologii i kombinatorike (2004)(ru)(272s).djvu  Cubant_Visualization.doc  Pontryagin L.S. Osnovy kombinatornoj topologii (1986)(ru)(120s).djvu  TODO  TODO2  cubants-2009.ppt  cubants_intro.doc  cubants_visualization.doc  diploma.odt  examle-new.odt  grant_pr.ppt
frobclass/: data.h  frobrutforce.cpp
qcubant/: TODO  backup.js  qcubant.pro  src.js
todo/: dev-plans  gena  itroot
tracemonkey/: configure
trash/: diploma_intro_Pritula.doc
work/: presentation.odp  Описание ПО-2.ppt  Описание ПО.ppt
(+350 files in other folders)
