AC_PREREQ(2.59)
AC_INIT([cubant], [1.0], [tolstosheyev@yandex.ru])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_SRCDIR([src/CubantApi.cpp])

AC_CONFIG_MACRO_DIR([m4])


AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([
  Makefile
  include/Makefile
  src/Makefile
  tests/Makefile
])

AC_OUTPUT
